--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -1,11 +1,11 @@
 /*all*/
 /*font*/
-@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Audiowide", cursive;
+  font-family: "Roboto Mono", monospace;
 }
 h1,
 h2 {
@@ -17,7 +17,6 @@ h2 {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  background-color: #87ceeb;
   gap: 5px;
   padding: 10px;
   border-radius: 5px;
@@ -26,12 +25,8 @@ h2 {
 .kbd-key {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #000;
   text-align: center;
   align-self: center;
-}
-#led-circle {
-  color: green;
 }
 .space {
   grid-column: span 3/8;
